Ajout traduction en anglais

--- a/lang/en.json
+++ b/lang/en.json
@@ -71,10 +71,32 @@
     "You are receiving this email because we received a password reset request for your account.": "You are receiving this email because we received a password reset request for your account.",
     "You're logged in!": "You're logged in!",
     "Your email address is unverified.": "Your email address is unverified.",
-    "Listes des ventes":"Sales list",
-    "Listes des produits":"Product list",
-    "Listes des marques":"Brand list",
-    "Vous naviguez en":"You're navigating in",
-    "Anglais":"English",
-    "Français":"French"
+    "Listes des ventes": "Sales list",
+    "Listes des produits": "Product list",
+    "Listes des marques": "Brand list",
+    "Vous naviguez en": "You're navigating in",
+    "Anglais": "English",
+    "Français": "French",
+    "Mise à jour": "Update",
+    "Quantité": "Amount",
+    "Produit": "Product",
+    "Valider": "Confirm",
+    "Création d'une vente": "Vente create",
+    "Ajouter": "Add",
+    "Nom du produit": "Product name",
+    "Prix à l'unité": "Unite price",
+    "Modifier": "Edit",
+    "Supprimer": "Delete",
+    "Nom": "Name",
+    "Prix": "Price",
+    "Liste des ventes": "Sales list",
+    "Prix total": "Total price",
+    "Date et heure de vente": "Date and hour of the sale",
+    "Liste des produits": "Product list",
+    "Référence": "Reference",
+    "Marque": "Brand",
+    "Création d'un produit": "Product create",
+    "Liste des marques": "Brand list",
+    "Pays": "Country",
+    "Création d'une marque": "Brand create"
 }
