Ajout traduction en français

--- a/lang/en.json
+++ b/lang/en.json
@@ -98,5 +98,6 @@
     "Création d'un produit": "Product create",
     "Liste des marques": "Brand list",
     "Pays": "Country",
-    "Création d'une marque": "Brand create"
+    "Création d'une marque": "Brand create",
+    "Nom de la marque": "Brand name"
 }
