--- a/lang/fr.json
+++ b/lang/fr.json
@@ -71,10 +71,28 @@
     "You are receiving this email because we received a password reset request for your account.": "Vous recevez cet e-mail car nous avons reçu une demande de réinitialisation de mot de passe pour votre compte.",
     "You're logged in!": "Vous êtes connecté·e !",
     "Your email address is unverified.": "Votre adresse e-mail n'est pas vérifiée.",
-    "Sales list":"Listes des ventes",
-    "Product list":"Listes des produits",
-    "Brand list":"Listes des marques",
-    "You're navigating in":"Vous naviguez en",
-    "English":"Anglais",
-    "French":"Français"
+    "You're navigating in": "Vous naviguez en",
+    "English": "Anglais",
+    "French": "Français",
+    "Update": "Mise à jour",
+    "Amount": "Quantité",
+    "Product": "Produit",
+    "Vente create": "Création d'une vente",
+    "Add": "Ajouter",
+    "Product name": "Nom du produit",
+    "Unite price": "Prix à l'unité",
+    "Edit": "Modifier",
+    "Delete": "Supprimer",
+    "Price": "Prix",
+    "Sales list": "Liste des ventes",
+    "Total price": "Prix total",
+    "Date and hour of the sale": "Date et heure de vente",
+    "Product list": "Liste des produits",
+    "Reference": "Référence",
+    "Brand": "Marque",
+    "Product create": "Création d'un produit",
+    "Brand list": "Liste des marques",
+    "Country": "Pays",
+    "Brand create": "Création d'une marque",
+    "Brand name": "Nom de la marque"
 }
