Ajout page Détails

--- a/lang/en.json
+++ b/lang/en.json
@@ -99,5 +99,9 @@
     "Liste des marques": "Brand list",
     "Pays": "Country",
     "Création d'une marque": "Brand create",
-    "Nom de la marque": "Brand name"
+    "Nom de la marque": "Brand name",
+    "Détails du produit": "Product details",
+    "Détails de la vente": "Sale details",
+    "Détails de la marque": "Brand details",
+    "Détails": "Details"
 }
