Ajout des components + mails

--- a/lang/en.json
+++ b/lang/en.json
@@ -88,12 +88,14 @@
     "Modifier": "Edit",
     "Supprimer": "Delete",
     "Nom": "Name",
+    "nom": "Name",
     "Prix": "Price",
     "Liste des ventes": "Sales list",
     "Prix total": "Total price",
     "Date et heure de vente": "Date and hour of the sale",
     "Liste des produits": "Product list",
     "Référence": "Reference",
+    "référence": "Reference",
     "Marque": "Brand",
     "Création d'un produit": "Product create",
     "Liste des marques": "Brand list",
